#13,#52 Added API endpoints for deletion and implemented cascading delete for depending entities.
